--- a/fase_2/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_flutter/pubspec.yaml
+++ b/fase_2/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_flutter/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
+  flutter_nfc_kit: ^3.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +44,7 @@ dependencies:
   cloud_firestore: ^5.4.4
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
@@ -50,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
 
 
 # For information on the generic Dart part of this file, see the
