--- a/fase_2/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_ignite_web/requirements.txt
+++ b/fase_2/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_ignite_web/requirements.txt
@@ -24,12 +24,14 @@ httpx==0.27.2
 idna==3.10
 Jinja2==3.1.4
 jwcrypto==1.5.6
+kaleido==0.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 oauth2client==4.1.3
 oauthlib==3.2.2
 packaging==23.2
+plotly==5.24.1
 protobuf==5.29.0rc3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
@@ -55,6 +57,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.3
+tenacity==9.0.0
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
