--- a/fase_3/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_flutter/pubspec.yaml
+++ b/fase_3/Evidencias Proyecto/Evidencias de sistema Aplicación/nfc_flutter/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
     sdk: flutter
    
   flutter_nfc_kit: ^3.0.0
-
+  pdf: ^3.6.0
+  printing: ^5.6.0
+  path_provider: ^2.0.9
+  permission_handler: ^10.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
